tests/paczka1/fuzzy1/78435681.err
Error in line 11: A307 A307 98,4
Error in line 18: 8aUEdn{Hmj S836 11,1
Error in line 8: DS4 S817 50,9
Error in line 19: m9k A307 6,2
Error in line 16: 8aUEdn7Hmj S836 29,9
Error in line 21: DS4 S836 17,3
Error in line 32: 8aUEdn7Hmj A307 12,6
